{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 180,
  "lineage": "0bd19ac4-2288-8c79-bc21-144d6c371f4a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:internet-gateway/igw-0c4f9cab2da567b58",
            "id": "igw-0c4f9cab2da567b58",
            "owner_id": "992122884453",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-igw",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-igw",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:route-table/rtb-0ba47f79dc3e3185c",
            "id": "rtb-0ba47f79dc3e3185c",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4f9cab2da567b58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-igw-rt",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-igw-rt",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f83b330e243ffd1",
            "route_table_id": "rtb-0ba47f79dc3e3185c",
            "subnet_id": "subnet-0d6bc3cba7c641321"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.gw_rt",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-098ce78f916e7056d",
            "description": "Describes the security group to be used",
            "egress": [],
            "id": "sg-098ce78f916e7056d",
            "ingress": [],
            "name": "eu-central-1-database-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-database-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-database-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-058dbf585d4e91791",
            "description": "Describes the security group to be used",
            "egress": [],
            "id": "sg-058dbf585d4e91791",
            "ingress": [],
            "name": "eu-central-1-load_balancer-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-load_balancer-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-load_balancer-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "microservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-0b8c6c5a3a2d67d3d",
            "description": "Describes the security group to be used",
            "egress": [],
            "id": "sg-0b8c6c5a3a2d67d3d",
            "ingress": [],
            "name": "eu-central-1-micro-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-micro-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-micro-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group/sg-0d0e99497fc78c72f",
            "description": "Describes the security group to be used",
            "egress": [],
            "id": "sg-0d0e99497fc78c72f",
            "ingress": [],
            "name": "eu-central-1-main-sg",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-sg",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-0663822a447db4cbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.150.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0663822a447db4cbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-1}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-1}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-0c7f05e55f3e31247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7f05e55f3e31247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-2}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-2}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-007abaff6570d3401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007abaff6570d3401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-3}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-private-subnet-3}",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:subnet/subnet-0d6bc3cba7c641321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.149.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bc3cba7c641321",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-public-subnet-1",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-public-subnet-1",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "vpc_id": "vpc-0e3c07beba8a3c3d6"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:vpc/vpc-0e3c07beba8a3c3d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d8b31e2f4d9e1e21",
            "default_route_table_id": "rtb-0dbf612e9b9534ce2",
            "default_security_group_id": "sg-04ebfc7bca42bc339",
            "dhcp_options_id": "dopt-05d3b4ab285581091",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3c07beba8a3c3d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbf612e9b9534ce2",
            "owner_id": "992122884453",
            "tags": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-vpc",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "BusinessOwner": "Digital Engineering",
              "CreatedBy": "George Ndungu",
              "Environment": "sandbox",
              "Name": "eu-central-1-challenge-vpc",
              "Owner": "gndungu",
              "Project": "devops-challenge"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group-rule/sgr-09bde02d38ccd0382",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-09bde02d38ccd0382",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e99497fc78c72f",
            "security_group_rule_id": "sgr-09bde02d38ccd0382",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "database_protocol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group-rule/sgr-0fed9b948ece304e8",
            "cidr_ipv4": "172.31.151.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0fed9b948ece304e8",
            "ip_protocol": "6",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-098ce78f916e7056d",
            "security_group_rule_id": "sgr-0fed9b948ece304e8",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.database",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "load_balancer_protocol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group-rule/sgr-089dd42091b2f89a7",
            "cidr_ipv4": "172.31.149.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-089dd42091b2f89a7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-058dbf585d4e91791",
            "security_group_rule_id": "sgr-089dd42091b2f89a7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.load_balancer",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "microservice_protocol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group-rule/sgr-008b651d9c0082a8d",
            "cidr_ipv4": "172.31.150.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-008b651d9c0082a8d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e99497fc78c72f",
            "security_group_rule_id": "sgr-008b651d9c0082a8d",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_protocol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:992122884453:security-group-rule/sgr-0438ba48d039dbc1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0438ba48d039dbc1c",
            "ip_protocol": "6",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d0e99497fc78c72f",
            "security_group_rule_id": "sgr-0438ba48d039dbc1c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}